<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deckConstraintlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purpleCute">


    <ImageView
        android:id="@+id/imageViewClassDeck"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/class_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deckName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/deckName"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewClassDeck"
        app:layout_constraintStart_toEndOf="@+id/imageViewClassDeck"
        app:layout_constraintTop_toTopOf="@+id/imageViewClassDeck" />

    <Button
        android:id="@+id/editDeckButton"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button"
        android:minHeight="48dp"
        android:text="@string/editDeck"
        android:textColor="@color/purpleCute"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewClassDeck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewClassDeck"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/deleteDeckButton"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_button"
        android:minHeight="48dp"
        android:text="@string/deleteDeck"
        android:textColor="@color/purpleCute"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewClassDeck"
        app:layout_constraintEnd_toStartOf="@+id/editDeckButton"
        app:layout_constraintTop_toTopOf="@+id/imageViewClassDeck"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>