<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleCute"
    tools:context=".CU13.HeroInfoActivity">

    <ImageView
        android:id="@+id/heroe_skinDetails"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/hero_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroe_skinDetailsName"
        app:srcCompat="@drawable/hearthstone_logo" />

    <TextView
        android:id="@+id/heroe_skinDetailsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/testInfo"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addHeroe_skinFavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/purpleCute"
        android:text="@string/addFavorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/artistName"
        android:minHeight="40dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/addHeroe_skinFavorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroe_skinDetails" />

</androidx.constraintlayout.widget.ConstraintLayout>