<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleCute"
    tools:context=".CU03.CardInfoActivity">

    <ImageView
        android:id="@+id/cardDetails"
        android:layout_width="300dp"
        android:layout_height="370dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/card_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardtitle"
        app:srcCompat="@drawable/hearthstone_logo" />

    <TextView
        android:id="@+id/cardtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        android:textSize="30sp"
        android:text="@string/testInfo"
        android:gravity="center"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/cardDetail1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:minHeight="40dp"
        android:text="@string/testInfo"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDetails" />

    <TextView
        android:id="@+id/cardDetail2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:minHeight="40dp"
        android:text="@string/testInfo"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDetail1" />

    <TextView
        android:id="@+id/cardDetail3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:minHeight="40dp"
        android:text="@string/testInfo"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDetail2" />

    <TextView
        android:id="@+id/cardDetail4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:minHeight="40dp"
        android:text="@string/testInfo"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDetail3" />

    <Button
        android:id="@+id/add_delete_favoriteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rounded_button"
        android:text="@string/addFavorite"
        android:textColor="@color/purpleCute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDetail4" />
</androidx.constraintlayout.widget.ConstraintLayout>